--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "babel-plugin-transform-export-extensions": "^6.22.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.1.1",
     "eslint": "^3.18.0",
     "eslint-config-standard": "^7.1.0",
